# ijkplayer-windows

./: .gitignore
ijkmedia/: Makefile.am  Makefile.in  config.h.in  config.status  configure  configure.in
ijkmedia/ijkplayer/: Makefile.am  Makefile.in  ff_ffplay.c  ijkversion.h
ijkmedia/ijkplayer/ijkavformat/: ijkiomanager.c  ijklivehook.c  ijksegment.c
ijkmedia/ijkplayer/ijkavutil/: ijkdict.c
ijkmedia/ijkplayer/windows/: Makefile.am  Makefile.in  ijkplayer_win.c  ijkplayer_win.h  ijkplayer_win_test.c
ijkmedia/ijkplayer/windows/pipeline/: ffpipeline_windows.c  ffpipeline_windows.h
ijkmedia/ijksdl/: Makefile.am  Makefile.in  ijksdl_aout.h  ijksdl_audio.h  ijksdl_egl.c  ijksdl_egl.h  ijksdl_error.h  ijksdl_mutex.h  ijksdl_stdinc.h  ijksdl_thread.c  ijksdl_thread.h  ijksdl_timer.h  ijksdl_vout.h
ijkmedia/ijksdl/gles2/: SDL_gles2funcs.h  common.c  internal.h  renderer.c  renderer_rgb.c  renderer_yuv420p.c  renderer_yuv420sp.c  renderer_yuv444p10le.c  shader.c
ijkmedia/ijksdl/windows/: ijksdl_aout_win_openal.c  ijksdl_aout_win_openal.h  ijksdl_utils_win.c  ijksdl_utils_win.h  ijksdl_vout_win_nativewindows.c  ijksdl_vout_win_nativewindows.h  ijksdl_vout_win_surface.c  ijksdl_vout_win_surface.h
