#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT([FULL-PACKAGE-NAME], [VERSION], [BUG-REPORT-ADDRESS])
#AC_CONFIG_SRCDIR([ijkj4a/j4a/j4a_allclasses.c])
AC_CONFIG_HEADERS([config.h])
:${CFLAGS=""}
:${CXXFLAGS=""}
# Checks for programs.
AC_PROG_CC
AC_PROG_CXX
 
# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([fcntl.h inttypes.h limits.h memory.h stddef.h stdint.h stdlib.h string.h sys/time.h unistd.h])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_PROG_RANLIB
AM_PROG_LIBTOOL
# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_INLINE
AC_TYPE_INT16_T
AC_TYPE_INT32_T
AC_TYPE_INT64_T
AC_TYPE_INT8_T
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_TYPE_SSIZE_T
AC_TYPE_UINT16_T
AC_TYPE_UINT32_T
AC_TYPE_UINT64_T
AC_TYPE_UINT8_T

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_CHECK_FUNCS([clock_gettime floor gettimeofday memset strchr strdup strerror strncasecmp strstr strtol])

AC_CONFIG_FILES([Makefile
                 ijkplayer/Makefile
                 ijksdl/Makefile
				 ijkplayer/windows/Makefile])
AC_OUTPUT
